<?xml version="1.0" encoding="utf-8"?>
<resources>
  
  <string name="app_name">卡路里，Follow Me</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="today_different">今日相差</string>
  <string name="get">得到</string>
  <string name="consumer">消耗</string>
  <string name="eating">進食</string>
  <string name="motion">運動</string>
  <string name="record">記錄表</string>
  <string name="join_record">加入紀錄</string>
  <string name="eating_dialog_title">設定進食</string>
  <string name="join_list">加入列表</string>
  <string name="calculate">計算</string>
  <string name="result">結果 : </string>
  <string name="save">儲存</string>
  <string name="start_timing">計時開始</string>
  <string name="stop_timing">停止結算</string>

  <color name="yellow">#FFFF00</color>
  <color name="gray">#888888</color>
</resources>
