<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/demo_backgroud">

  <Spinner
    android:layout_centerHorizontal="true"
    android:spinnerMode="dropdown"
    android:id="@+id/sp_sport"
    android:layout_marginTop="10dp"
    android:layout_width="180dp"
    android:layout_height="60dp"/>

  <LinearLayout
    android:layout_marginTop="20dp"
    android:layout_centerHorizontal="true"
    android:orientation="horizontal"
    android:id="@+id/l"
    android:layout_below="@id/sp_sport"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <EditText
      android:numeric="integer"
      android:maxLength="5"
      android:layout_weight="1"
      android:layout_below="@+id/sp_sport"
      android:id="@+id/et_consumer"
      android:layout_width="90dp"
      android:layout_height="40dp"/>
    <TextView
      android:layout_marginLeft="15dp"
      android:layout_marginBottom="4dp"
      android:textSize="20sp"
      android:textColor="@color/yellow"
      android:layout_gravity="bottom"
      android:text="單位(分)"
      android:layout_width="75dp"
      android:layout_height="wrap_content"/>
  </LinearLayout>

  <TextView
    android:textColor="@color/yellow"
    android:id="@+id/tv_show_time"
    android:layout_marginTop="5dp"
    android:layout_alignLeft="@+id/sp_sport"
    android:layout_below="@+id/l"
    android:textSize="22sp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

  <FrameLayout
    android:layout_marginLeft="20dp"
    android:layout_below="@+id/tv_show_time"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ListView
      android:scrollbars="none"
      android:id="@+id/listView"
      android:layout_marginTop="10dp"
      android:layout_width="240dp"
      android:layout_height="match_parent"/>
    <LinearLayout
      android:paddingRight="20dp"
      android:paddingBottom="20dp"
      android:layout_gravity="right|bottom"
      android:orientation="vertical"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
      <Button
        android:id="@+id/btn_timer"
        android:text="@string/start_timing"
        android:layout_width="80dp"
        android:layout_height="wrap_content"/>
      <Button
        android:id="@+id/btn_join_list"
        android:layout_marginTop="10dp"
        android:text="@string/join_list"
        android:layout_width="80dp"
        android:layout_height="wrap_content"/>
      <Button
        android:id="@+id/btn_save"
        android:layout_marginTop="10dp"
        android:text="@string/save"
        android:layout_width="80dp"
        android:layout_height="wrap_content"/>
      <TextView
        android:id="@+id/tv_result"
        android:layout_marginTop="10dp"
        android:paddingRight="35dp"
        android:text="@string/result"
        android:textColor="@color/yellow"
        android:layout_gravity="right"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>
    </LinearLayout>
  </FrameLayout>
</RelativeLayout>